k8s/ingress/dinetime-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dinetime-ingress
  annotations:
    appgw.ingress.kubernetes.io/health-probe-path: /healthz
spec:
  ingressClassName: azure-application-gateway
  rules:
    - http:
        paths:
          - path: /realtime
            pathType: Prefix
            backend:
              service:
                name: realtime-service
                port:
                  number: 80
          - path: /ranking
            pathType: Prefix
            backend:
              service:
                name: ranking-service
                port:
                  number: 80
          - path: /matchmaker
            pathType: Prefix
            backend:
              service:
                name: matchmaker-service
                port:
                  number: 80
          - path: /identity
            pathType: Prefix
            backend:
              service:
                name: identity-service
                port:
                  number: 80
