k8s/ingress/identity-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: identity-ingress
  annotations:
    appgw.ingress.kubernetes.io/health-probe-path: /identity/healthz
spec:
  ingressClassName: azure-application-gateway
  rules:
    - http:
        paths:
          - path: /identity
            pathType: Prefix
            backend:
              service:
                name: identity-service
                port:
                  number: 80
